gitops/infrastructure/gateway/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: sample-external
  namespace: gateways
  annotations:
    networking.gke.io/certmap: REPLACE_ME_GATEWAY_CERTIFICATE_MAP_NAME
spec:
  gatewayClassName: gke-l7-global-external-managed-mc
  addresses:
    - type: NamedAddress
      value: REPLACE_ME_GATEWAY_STATIC_IP_NAME
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: REPLACE_ME_GATEWAY_HOSTNAME
      allowedRoutes:
        namespaces:
          from: All
