gitops/infrastructure/gateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sample-external-route
  namespace: gateways
spec:
  parentRefs:
    - name: sample-external
      namespace: gateways
  hostnames:
    - REPLACE_ME_GATEWAY_HOSTNAME
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: sample-app
          namespace: sample-app
          group: net.gke.io
          kind: ServiceImport
          port: 8080
